# python-practice

./: .gitignore  pyproject.toml
src/basics/: classes.py
src/title_case/: title_case.py
tests/: title_case_test.py
